--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ lto = true
 regex = "1.7.1"
 glob = "0.3.1"
 rust-ini = "0.13.0"
-clap = "3.2.23"
+clap = { version = "4.1.10", features = ["derive"] }
 time = "0.1.45"
 nix = "0.26.2"
 users = "0.11.0"
