update time dependency (major API change)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,6 @@ regex = "1.7.1"
 glob = "0.3.1"
 rust-ini = "0.18.0"
 clap = { version = "4.1.10", features = ["derive"] }
-time = "0.1.45"
+time = { version = "0.3.20", features = ["macros", "parsing", "local-offset"] }
 nix = "0.26.2"
 users = "0.11.0"
